Refactor middleware and utility classes for improved functionality and clarity
- Updated NormalizationMiddleware to use generics for normalization specifications.
- Enhanced ParamsMiddleware documentation and added parameter parsing logic.
- Fixed SessionMiddleware to correctly check for cookie attributes.
- Improved MultipartParser with additional documentation and boundary parsing.
- Removed deprecated parseAcceptFragment method from AcceptHeaderNegotiator.
- Refined MemoryStore's proxy class resolution logic.
- Enhanced HttpResponseUtils with new utility methods and improved content handling.
- Added comprehensive tests for DefaultHttpResponse and ConversationMiddleware.
- Updated Jackson dependencies in ExampleApplicationFactory and related classes.
- Refactored SerDesMiddleware to utilize new Jackson features and improved type handling.
- Added tests for SerDesMiddleware to ensure correct serialization and deserialization behavior.